[package]
name = "diplo"
version = "0.2.0"
edition = "2018"
description = "A script runner for deno made in rust™️"
authors = ["Tricked-dev"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Tricked-dev/diplo"
homepage = "https://tricked.pro/diplo"


[dependencies]
clap = "3.0.0-beta.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.4", features = ["json", "gzip", "brotli"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.5.4"
rprompt = "1.0.5"
watchexec = "1.17.1"
