[package]
name = "diplo"
version = "0.7.0"
edition = "2018"
description = "Diplo is a script runner and dependency manager made in rust"
authors = ["Tricked-dev"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Tricked-dev/diplo"
homepage = "https://tricked.pro/diplo"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.deb]
maintainer = "Tricked-dev"
copyright = "2021, Tricked-dev"
license-file = ["LICENSE", "4"]
extended-description = """https://github.com/Tricked-dev/diplo"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/diplo",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/diplo/README",
        "644",
    ],
]


[dependencies]
clap = "3.0.0-beta.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.5", features = ["json", "gzip", "brotli"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
regex = "1.5.4"
rprompt = "1.0.5"
watchexec = "1.17.1"
termcolor = "1.1.2"
anyhow = "1.0.44"
atty = "0.2.14"
once_cell = "1.8.0"
toml_edit = "0.6.0"
toml = "0.5.8"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.36", features = ["vendored"] }

[features]


[[bin]]
name = "diplo"
path = "src/bin/diplo.rs"
