[package]
name = "diplo-installer"
version = "0.1.0"
edition = "2018"
description = "Installer site for diplo"
authors = ["Tricked-dev"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Tricked-dev/diplo"
homepage = "https://tricked.pro/diplo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = { git = "https://github.com/Tricked-dev/workers-rs", rev = "c7a238f9641dd48b504bfbcb1d0f0759a0a30dee" }
serde_json = "1.0.68"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
reqwest = "0.11.6"
serde = { version = "1.0.130", features = ["derive"] }
worker-sys = "0.0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
